<resources>
    <string name="app_name">Game09</string>
    <string name="dummy_button">Exit</string>
    <string name="dummy_content">GAME 09</string>
    <string name="credit_data">10.000</string>
    <string name="btn_spin">Spin</string>
    <string name="credit_label">Credit</string>
    <string name="todo_test">test</string>
    <string name="textCreditLabel" />
    <string name="bet_data">1</string>
    <string name="btn_bet_max">+</string>
    <string name="btn_bet_min">-</string>
    <string name="lbl_lastWin">You win</string>
    <string name="lastWin_data">0</string>
    <string name="description"></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_userName">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="urlBase">"http://163.172.53.182/game09/"</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>